--- a/openhpi/trunk/Makefile.am
+++ b/openhpi/trunk/Makefile.am
@@ -66,17 +66,17 @@ ALLSOURCES = \
         $(shell find $(top_srcdir)/utils -name .svn -o -name CVS -prune -o \
         -name '*.[chS]' -print | grep -v '/t/') \
         $(shell find $(top_srcdir)/openhpid -name .svn -o -name CVS -prune -o \
-        -name '*.[chS]' -print | grep -v '/t/') \
+        -name '*.[chS]' -print -o '*.cpp' -print | grep -v '/t/') \
         $(shell find $(top_srcdir)/plugins -name .svn -o -name CVS -prune -o \
-        -name '*.[chS]' -print | grep -v '/t/') \
+        -name '*.[chS]' -print -o '*.cpp' -print | grep -v '/t/') \
         $(shell find $(top_srcdir)/snmp -name .svn -o -name CVS -prune -o \
         -name '*.[chS]' -print | grep -v '/t/') \
         $(shell find $(top_srcdir)/marshal -name .svn -o -name CVS -prune -o \
         -name '*.[chS]' -print | grep -v '/t/') \
         $(shell find $(top_srcdir)/clients -name .svn -o -name CVS -prune -o \
-        -name '*.[chS]' -print | grep -v '/t/')
+        -name '*.[chS]' -print | grep -v '/t/') \
         $(shell find $(top_srcdir)/cpp -name .svn -o -name CVS -prune -o \
-        -name '*.[chS]' -print | grep -v '/t/')
+        -name '*.[ch]pp' -print | grep -v '/t/')
 
 includedir=$(base_includedir)/openhpi
 # These are the only headers that users should have any access to
