Fix/update marshaling test after variable array fix

--- a/openhpi/trunk/marshal/t/Makefile.am
+++ b/openhpi/trunk/marshal/t/Makefile.am
@@ -190,7 +190,7 @@ nodist_marshal_026_SOURCES = $(REMOTE_SOURCES)
 marshal_027_SOURCES = marshal_027.c
 nodist_marshal_027_SOURCES = $(REMOTE_SOURCES)
 marshal_028_SOURCES = marshal_028.c
-nodist_marshal_028_SOURCES = $(REMOTE_SOURCES)
+nodist_marshal_028_SOURCES = $(MARSHAL_SOURCES) $(REMOTE_SOURCES)
 marshal_029_SOURCES = marshal_029.c
 nodist_marshal_029_SOURCES = $(REMOTE_SOURCES)
 marshal_030_SOURCES = marshal_030.c
