--- a/openhpi/trunk/openhpi.spec.in
+++ b/openhpi/trunk/openhpi.spec.in
@@ -31,11 +31,11 @@ URL: http://www.openhpi.org
 Source: http://prdownloads.sourceforge.net/openhpi/%{name}-%{version}.tar.gz
 #
 Buildroot: %{_rpmtopdir}/INSTALL
-BuildRequires: pkgconfig glib2-devel automake autoconf libtool net-snmp-devel gcc-c++ docbook-utils
+BuildRequires: pkgconfig glib2-devel automake autoconf libtool net-snmp-devel gcc-c++
 %if 0%{?suse_version}
 BuildRequires: tcpd-devel
 %else
-BuildRequires: tcp_wrappers docbook-utils-pdf
+BuildRequires: tcp_wrappers
 %endif
 Requires: e2fsprogs-devel openssl-devel libstdc++-devel glib2-devel
 
@@ -47,7 +47,9 @@ Requires: openhpi = %{version}
 %package clients
 Summary: OpenHPI command-line utilities
 Group: System/Monitoring
+%if 0%{?suse_version}
 BuildRequires: popt-devel
+%endif
 Requires: openhpi = %{version} popt
 
 %if 0%{?with_ipmi}
