1888910: Include LSB Init Script section in daemon start-up script

--- a/openhpi/trunk/openhpid/openhpid.sh.in
+++ b/openhpi/trunk/openhpid/openhpid.sh.in
@@ -1,4 +1,16 @@
-#! /bin/bash
+#! /bin/sh
+#
+### BEGIN INIT INFO
+# Provides:          openhpid
+# Required-Start:    $network $remote_fs $syslog
+# Required-Stop:     $network $remote_fs $syslog
+# Should-Start:      $named
+# Should-Stop:       $named
+# Default-Start:     2 3 4 5
+# Default-Stop:      0 1 6
+# Short-Description: Start OpenHPI daemon at boot time
+# Description:       Enable OpenHPI service which is provided by openhpid.
+### END INIT INFO
 #
 # openhpid.sh    Start/Stop the openhpi daemon.
 #
