1. Add constructors to all HPI structures with optional keyword arguments, 2. Fix problem with oh_get_rpt_info parameters, 3. Fix other misc things that were confusing to Swig

--- a/python/trunk/MANIFEST.in
+++ b/python/trunk/MANIFEST.in
@@ -6,4 +6,5 @@ include swigify.py
 include deps.py
 include setup.py
 include get_hpi_sizeof.sh
+include struct_constructors.py
 recursive-include examples *.py
