--- a/openhpi/branches/modular/openhpid/Makefile.am
+++ b/openhpi/branches/modular/openhpid/Makefile.am
@@ -57,8 +57,7 @@ endif
 
 lib_LTLIBRARIES	        = libopenhpi.la
 
-libopenhpi_la_SOURCES = \
-	openhpiclient.cpp
+libopenhpi_la_SOURCES = oh_client.cpp oh_client_connxs.cpp 
 
 libopenhpi_la_LDFLAGS = -version-info @HPI_LIB_VERSION@
 libopenhpi_la_LIBADD  = $(top_builddir)/marshal/libohtcpconnx.la -lstdc++ \
