1944141: Add OpenSSL library initialization to infrastructure; also affects ilo2_ribcl and oa_soap plugins, as both were doing this initialization before

--- a/openhpi/trunk/configure.ac
+++ b/openhpi/trunk/configure.ac
@@ -118,12 +118,12 @@ AC_CHECK_LIB([uuid], [uuid_generate], [have_uuid=yes], [
     ])
 
 dnl ssl is used for md2/md5 authentification in ipmidirect
-dnl and for RIBCL communication in ilo2_ribcl
+dnl and for SSL-based communication in ilo2_ribcl and oa_soap
 AC_CHECK_LIB([ssl],[MD5_Init],[SSL_LIB=-lssl],[SSL_LIB=])
 AC_SUBST(SSL_LIB)
 AC_CHECK_HEADERS([openssl/md2.h openssl/md5.h openssl/bio.h openssl/ssl.h openssl/err.h],[have_openssl=yes],[have_openssl=no])
 
-dnl xml is used for RIBCL communication in ilo2_ribcl
+dnl xml is used for XML-based communication in ilo2_ribcl and oa_soap
 AC_CHECK_LIB([xml2],[xmlParseMemory],[XML2_LIB=-lxml2],[XML2_LIB=])
 AC_CHECK_HEADERS([libxml2/libxml/xmlexports.h],[XML2_INCLUDE="-I/usr/include/libxml2"],[XML2_INCLUDE])
 AC_SUBST(XML2_LIB)
@@ -614,11 +614,15 @@ dnl remerge the warnings into the FLAGS
 CXXFLAGS="$CFLAGS $CXX_WARNINGS"
 CFLAGS="$CFLAGS $CC_WARNINGS"
 
-dnl lastly, we add things if we are thread safe
+dnl lastly, we add things if we are thread safe and have the openssl library
 dnl (this could probably happen earlier in this file)
 if test "x$THREAD_SAFE" = "xyes" ; then
         CFLAGS="$CFLAGS -D_GNU_SOURCE -D_REENTRANT -fexceptions"
         CXXFLAGS="$CXXFLAGS -D_GNU_SOURCE -D_REENTRANT -fexceptions"
+fi
+if test "x$have_openssl" = "xyes" ; then
+        CFLAGS="$CFLAGS -DHAVE_OPENSSL"
+        CXXFLAGS="$CXXFLAGS -DHAVE_OPENSSL"
 fi
 
 dnl there are certain places we always want to turn off optimization
@@ -633,7 +637,7 @@ dnl replace common includes here
 AC_SUBST(OPENHPI_INCLUDES)
 
 dnl Set up libs that will be linked to
-LIBS="$LIBS $GLIB_LIBS -lm"
+LIBS="$LIBS $SSL_LIB $GLIB_LIBS -lm"
 if test "x$THREAD_SAFE" = "xyes" ; then
         LIBS="$LIBS -lpthread"
 fi
