#1947016 Connect to multiple daemons from one client

--- a/openhpi/trunk/openhpid/Makefile.am
+++ b/openhpi/trunk/openhpid/Makefile.am
@@ -15,30 +15,29 @@
 
 .NOTPARALLEL:
 
-#SUBDIRS			= t
-
 MAINTAINERCLEANFILES 	= Makefile.in *~
 
 REMOTE_SOURCES		= \
-		config.c \
-        	domain.c \
-	        event.c \
-        	threaded.c \
-	        alarm.c \
-        	hotswap.c \
-        	lock.c \
-        	plugin.c \
-        	plugin_static.c \
-        	init.c \
-        	safhpi.c \
-        	session.c \
-        	ssl_init.c \
-        	ohpi.c
+	config.c \
+       	domain.c \
+        event.c \
+       	threaded.c \
+        alarm.c \
+       	hotswap.c \
+       	lock.c \
+       	plugin.c \
+       	plugin_static.c \
+       	init.c \
+       	safhpi.c \
+       	session.c \
+       	ssl_init.c \
+       	ohpi.c
 
 AM_CFLAGS		= @CFLAGS@
 INCLUDES 		= @OPENHPI_INCLUDES@  -I$(top_srcdir)/marshal
 
-EXTRA_DIST		= openhpid.sh.in
+EXTRA_DIST		= \
+	openhpid.sh.in oh_client.h oh_client_conf.h oh_client_session.h
 
 # daemon
 sbin_PROGRAMS           = openhpid
@@ -60,8 +59,7 @@ endif
 
 lib_LTLIBRARIES	        = libopenhpi.la
 
-libopenhpi_la_SOURCES = \
-	openhpiclient.cpp
+libopenhpi_la_SOURCES = oh_client.cpp oh_client_session.cpp oh_client_conf.c
 
 libopenhpi_la_LDFLAGS = -version-info @HPI_LIB_VERSION@
 libopenhpi_la_LIBADD  = $(top_builddir)/marshal/libohtcpconnx.la -lstdc++ \
