--- a/openhpi/trunk/src/t/ohpi/Makefile.am
+++ b/openhpi/trunk/src/t/ohpi/Makefile.am
@@ -23,6 +23,7 @@ TDEPLIB                 = $(top_builddir)/src/libopenhpi.la \
 TESTS_ENVIRONMENT = OPENHPI_PATH=$(top_builddir)/plugins/simulator:$(top_builddir)/plugins/watchdog
 TESTS_ENVIRONMENT += OPENHPI_UID_MAP=$(top_builddir)/src/t/ohpi/uid_map
 TESTS_ENVIRONMENT += OPENHPI_CONF=$(top_srcdir)/src/t/ohpi/openhpi.conf
+TESTS_ENVIRONMENT += LD_LIBRARY_PATH=$(top_srcdir)/src/.libs:$(top_srcdir)/utils/.libs
 
 TESTS = \
         ohpi_007 \
