#1939985 AM_CFLAGS usage cleanup

--- a/openhpi/trunk/plugins/ipmi/Makefile.am
+++ b/openhpi/trunk/plugins/ipmi/Makefile.am
@@ -37,7 +37,7 @@ SUBDIRS			= t
 
 INCLUDES		= @OPENHPI_INCLUDES@
 
-AM_CFLAGS		= @CFLAGS@ @OPENIPMI_CFLAGS@
+AM_CFLAGS		= @OPENIPMI_CFLAGS@
 
 pkglib_LTLIBRARIES	= libipmi.la
 
