--- a/openhpi/trunk/plugins/snmp_bc/Makefile.am
+++ b/openhpi/trunk/plugins/snmp_bc/Makefile.am
@@ -25,7 +25,7 @@ SUBDIRS	= t
 
 INCLUDES = @OPENHPI_INCLUDES@ -I$(top_srcdir)/snmp -I$(SNMPUTILSDIR)
 
-AM_CFLAGS = @CFLAGS@ @SNMPFLAGS@
+AM_CFLAGS = @SNMPFLAGS@
 
 pkglib_LTLIBRARIES = libsnmp_bc.la
 
