--- a/openhpi/trunk/snmp/Makefile.am
+++ b/openhpi/trunk/snmp/Makefile.am
@@ -12,7 +12,7 @@ MAINTAINERCLEANFILES 	= Makefile.in
 
 INCLUDES		= @OPENHPI_INCLUDES@
 
-AM_CFLAGS		= @CFLAGS@ @SNMPFLAGS@
+AM_CFLAGS		= @SNMPFLAGS@
 
 lib_LTLIBRARIES		= libopenhpi_snmp.la
 
