--- a/openhpi/trunk/src/Makefile.am
+++ b/openhpi/trunk/src/Makefile.am
@@ -37,7 +37,7 @@ MOSTLYCLEANFILES        = @TEST_CLEAN@
 
 EXTRA_DIST              = plugin_static.c.in
 
-INCLUDES                = @OPENHPI_INCLUDES@
+INCLUDES                = @OPENHPI_INCLUDES@ -I$(top_srcdir)/$(SSLDIR)
 
 SUBDIRS                 = t
 
@@ -62,11 +62,13 @@ libopenhpi_la_SOURCES   = \
                            init.c \
                            safhpi.c \
                            session.c \
-                           ssl_init.c \
                            ohpi.c
 nodist_libopenhpi_la_SOURCES = plugin_static.c
 
 libopenhpi_la_LIBADD    = @STATIC_PLUGIN_LIBS@ @STATIC_PLUGIN_EXTRA_LIBS@ $(top_builddir)/utils/libopenhpiutils.la
+if HAVE_OPENSSL
+libopenhpi_la_LIBADD += $(top_builddir)/$(SSLDIR)/libopenhpi_ssl.la
+endif
 libopenhpi_la_LDFLAGS   = -L$(top_builddir)/utils -version-info @HPI_LIB_VERSION@ -export-dynamic
 libopenhpi_la_DEPENDENCIES = @STATIC_PLUGIN_LIBS@
 
