--- a/openhpi/trunk/openhpid/Makefile.am
+++ b/openhpi/trunk/openhpid/Makefile.am
@@ -33,7 +33,7 @@ REMOTE_SOURCES		= \
        	ohpi.c
 
 INCLUDES 		= \
-	@OPENHPI_INCLUDES@  -I$(top_srcdir)/marshal -I$(top_srcdir)/$(SSLDIR)
+	@OPENHPI_INCLUDES@  -I$(top_srcdir)/marshal -I$(top_srcdir)/@SSLDIR@
 
 EXTRA_DIST		= \
 	openhpid.sh.in oh_client.h oh_client_conf.h oh_client_session.h
@@ -47,7 +47,7 @@ nodist_openhpid_SOURCES = $(REMOTE_SOURCES)
 openhpid_LDADD		= $(top_builddir)/utils/libopenhpiutils.la \
 			  $(top_builddir)/marshal/libohtcpconnx.la
 if HAVE_OPENSSL
-openhpid_LDADD		+= $(top_builddir)/$(SSLDIR)/libopenhpi_ssl.la
+openhpid_LDADD		+= $(top_builddir)/@SSLDIR@/libopenhpi_ssl.la
 endif
 openhpid_LDFLAGS        = -export-dynamic
 
