This check-in includes multiple items.  (Sorry...we're working on that aspect.)
Bug #1933124: Sensor event not listing correct asserted events in CRITICAL
Bug #1933112: Multiple events for a state change during OA switchover
Bug #1933109: Push the resource discovery event after complete discovery
Bug #1933099: ManufacturerId missing in resource RPT discovered by OA SOAP
Bug #1933089: Re-discovery may show old FRU inventory details for new FRU
Bug #1932974: Memory allocated to IDR is not released in error scenario

In addition, there are other improvements to the plug-in, both cosmetic
and structural.  The most significant are:
- Previously, a single include file was included by all source files.
  This is wasteful in terms of compile time, and makes the source code
  less suitable for re-use.  This was eliminated.
- Linking against the zlib and crypto libraries was eliminated, as this
  was not needed.
- The layout (spacing) of the source code was adjusted in a number of
  cases to make it more standard
- Some comments were modified to improve readability

--- a/openhpi/trunk/plugins/oa_soap/Makefile.am
+++ b/openhpi/trunk/plugins/oa_soap/Makefile.am
@@ -35,7 +35,6 @@ pkglib_LTLIBRARIES      = liboa_soap.la
 
 liboa_soap_la_SOURCES   = oa_soap.h \
                           oa_soap.c \
-                          oa_soap_plugin.h \
                           oa_soap_power.h \
                           oa_soap_power.c \
                           oa_soap_reset.h \
@@ -77,14 +76,9 @@ liboa_soap_la_SOURCES   = oa_soap.h \
                           oa_soap_callsupport.h \
                           oa_soap_callsupport.c \
                           oa_soap_ssl.h \
-                          oa_soap_ssl.c 
+                          oa_soap_ssl.c
 
-# TODO: Are -lcrypto and -lz necessary?  What about -luuid in the ilo2_ribcl?
-liboa_soap_la_LIBADD    = @SSL_LIB@ @XML2_LIB@ -lcrypto -lz \
-			  $(top_builddir)/utils/libopenhpiutils.la
+# TODO: What about -luuid in the ilo2_ribcl?
+liboa_soap_la_LIBADD    = @SSL_LIB@ @XML2_LIB@ \
+                          $(top_builddir)/utils/libopenhpiutils.la
 liboa_soap_la_LDFLAGS   = -module -version-info @HPI_LIB_VERSION@
-
-# TODO: What would -export-dynamic be for?
-#liboa_soap_la_LDFLAGS  = -module -version-info @HPI_LIB_VERSION@ \
-			  -export-dymanic $(srcdir)/oa_soap.sym
-
