[ 1954014 ] Compliance to SAF HPI B.02.01 spec (See tracker for detailed description of changes)
This adds compliance for the OA plugin, for the B.02 spec.  Note that many of
the API's are not supported, but the plugin will at least report that to the
higher layers.

--- a/openhpi/trunk/plugins/oa_soap/Makefile.am
+++ b/openhpi/trunk/plugins/oa_soap/Makefile.am
@@ -71,6 +71,12 @@ liboa_soap_la_SOURCES   = oa_soap.h \
                           oa_soap_sel.c \
                           oa_soap_annunciator.h \
                           oa_soap_annunciator.c \
+                          oa_soap_dimi.h \
+                          oa_soap_dimi.c \
+                          oa_soap_fumi.h \
+                          oa_soap_fumi.c \
+                          oa_soap_load_id.h \
+                          oa_soap_load_id.c \
                           oa_soap_calls.h \
                           oa_soap_calls.c \
                           oa_soap_callsupport.h \
