[ 1945160 ] Add further support routines to SSL support library
This was basically moving the prior contents of plugins/oa_soap/*ssl.[ch]
to the ssl subdirectory, integrating it with oh_ssl.[ch]  In the process,
several other files which used the versions in the oa_soap plugin directory
needed to be modified to use the common version.

--- a/openhpi/trunk/plugins/oa_soap/Makefile.am
+++ b/openhpi/trunk/plugins/oa_soap/Makefile.am
@@ -29,7 +29,7 @@
 
 MAINTAINERCLEANFILES    = Makefile.in
 
-INCLUDES                = @OPENHPI_INCLUDES@ @XML2_INCLUDE@
+INCLUDES                = @OPENHPI_INCLUDES@ @XML2_INCLUDE@ @OH_SSL_INCLUDES@
 
 pkglib_LTLIBRARIES      = liboa_soap.la
 
@@ -80,9 +80,7 @@ liboa_soap_la_SOURCES   = oa_soap.h \
                           oa_soap_calls.h \
                           oa_soap_calls.c \
                           oa_soap_callsupport.h \
-                          oa_soap_callsupport.c \
-                          oa_soap_ssl.h \
-                          oa_soap_ssl.c
+                          oa_soap_callsupport.c
 
 # TODO: What about -luuid in the ilo2_ribcl?
 liboa_soap_la_LIBADD    = @SSL_LIB@ @XML2_LIB@ \
