--- a/openhpi/trunk/configure.ac
+++ b/openhpi/trunk/configure.ac
@@ -131,19 +131,6 @@ AC_CHECK_HEADERS([libxml2/libxml/xmlexports.h],[XML2_INCLUDE="-I/usr/include/lib
 AC_SUBST(XML2_LIB)
 AC_SUBST(XML2_INCLUDE)
 
-dnl Extra goodies enablement stanzas
-
-AC_ARG_ENABLE([thread],
-    [  --enable-thread         make implementation thread-safe [[default=yes]]],
-    [if test "x$enableval" = "xyes"; then
-        THREAD_SAFE="yes"
-    fi],
-    [THREAD_SAFE="yes"])
-
-if test "x$THREAD_SAFE" = "xyes"; then
-        AC_DEFINE([HAVE_THREAD_SAFE], [1], [Define to 1 if you want thread-safe implementation])
-fi
-
 dnl Enable the marshal directory only when needed by
 dnl the deamon
 openhpid_static="no"
@@ -314,14 +301,6 @@ AC_ARG_ENABLE([ipmidirect],
     [AC_SUBST(IPMIDIRECT,ipmidirect)])
 
 dnl    [AC_SUBST(IPMIDIRECT,ipmidirect)])
-
-dnl ipmidirect needs posix threads
-if test "x$IPMIDIRECT" = "xipmidirect"; then
-        if test "x$THREAD_SAFE" != "xyes" ; then
-                AC_MSG_ERROR("ipmidirect plugin needs thread support (--enable-thread) !")
-        fi
-fi
-
 
 OH_CHECK_RTAS
 
@@ -619,15 +598,13 @@ CFLAGS="$CFLAGS $CC_WARNINGS"
 
 dnl lastly, we add things if we are thread safe and have the openssl library
 dnl (this could probably happen earlier in this file)
-if test "x$THREAD_SAFE" = "xyes" ; then
-        CFLAGS="$CFLAGS -D_GNU_SOURCE -D_REENTRANT -fexceptions"
-        CXXFLAGS="$CXXFLAGS -D_GNU_SOURCE -D_REENTRANT -fexceptions"
-	if test "x$have_openssl" = "xyes"; then
-		SSLDIR=ssl
-		AC_DEFINE([HAVE_OPENSSL],[1],[openssl library was found])
-	fi
+CFLAGS="$CFLAGS -D_GNU_SOURCE -D_REENTRANT -fexceptions"
+CXXFLAGS="$CXXFLAGS -D_GNU_SOURCE -D_REENTRANT -fexceptions"
+if test "x$have_openssl" = "xyes"; then
+	SSLDIR=ssl
+	AC_DEFINE([HAVE_OPENSSL],[1],[openssl library was found])
 fi
-AM_CONDITIONAL(HAVE_OPENSSL, test x$have_openssl = xyes && test x$THREAD_SAFE = xyes)
+AM_CONDITIONAL(HAVE_OPENSSL, test x$have_openssl = xyes)
 OH_SSL_INCLUDES="-I\$(top_srcdir)/ssl"
 AC_SUBST(OH_SSL_INCLUDES)
 
@@ -636,10 +613,7 @@ dnl replace common includes here
 AC_SUBST(OPENHPI_INCLUDES)
 
 dnl Set up libs that will be linked to
-LIBS="$LIBS $SSL_LIB $GLIB_LIBS -lm"
-if test "x$THREAD_SAFE" = "xyes" ; then
-        LIBS="$LIBS -lpthread"
-fi
+LIBS="$LIBS $SSL_LIB $GLIB_LIBS -lm -lpthread"
 
 AC_CHECK_PROG([found_docbook2html], [docbook2html], [yes])
 AC_ARG_ENABLE([docs],
