--- a/openhpi/trunk/plugins/simulator/Makefile.am
+++ b/openhpi/trunk/plugins/simulator/Makefile.am
@@ -34,6 +34,7 @@ libsimulator_la_SOURCES	= sim_init.c sim_init.h \
 			  sim_el.c sim_el.h \
 			  sim_annunciators.c sim_annunciators.h \
 			  sim_annunciator_func.c sim_annunciator_func.h \
+              sim_dimi.h sim_dimi.c \
 			  sim_dimi_func.h sim_dimi_func.c \
               sim_fumi_func.h sim_fumi_func.c \
 			  sim_power.c sim_power.h \
