--- a/openhpi/branches/2.11.x/plugins/oa_soap/Makefile.am
+++ b/openhpi/branches/2.11.x/plugins/oa_soap/Makefile.am
@@ -29,13 +29,12 @@
 
 MAINTAINERCLEANFILES    = Makefile.in
 
-INCLUDES                = @OPENHPI_INCLUDES@ @XML2_INCLUDE@
+INCLUDES                = @OPENHPI_INCLUDES@ @XML2_INCLUDE@ @OH_SSL_INCLUDES@
 
 pkglib_LTLIBRARIES      = liboa_soap.la
 
 liboa_soap_la_SOURCES   = oa_soap.h \
                           oa_soap.c \
-                          oa_soap_plugin.h \
                           oa_soap_power.h \
                           oa_soap_power.c \
                           oa_soap_reset.h \
@@ -72,19 +71,18 @@ liboa_soap_la_SOURCES   = oa_soap.h \
                           oa_soap_sel.c \
                           oa_soap_annunciator.h \
                           oa_soap_annunciator.c \
+                          oa_soap_dimi.h \
+                          oa_soap_dimi.c \
+                          oa_soap_fumi.h \
+                          oa_soap_fumi.c \
+                          oa_soap_load_id.h \
+                          oa_soap_load_id.c \
                           oa_soap_calls.h \
                           oa_soap_calls.c \
                           oa_soap_callsupport.h \
-                          oa_soap_callsupport.c \
-                          oa_soap_ssl.h \
-                          oa_soap_ssl.c 
+                          oa_soap_callsupport.c
 
-# TODO: Are -lcrypto and -lz necessary?  What about -luuid in the ilo2_ribcl?
-liboa_soap_la_LIBADD    = @SSL_LIB@ @XML2_LIB@ -lcrypto -lz \
-			  $(top_builddir)/utils/libopenhpiutils.la
+# TODO: What about -luuid in the ilo2_ribcl?
+liboa_soap_la_LIBADD    = @SSL_LIB@ @XML2_LIB@ \
+                          $(top_builddir)/utils/libopenhpiutils.la
 liboa_soap_la_LDFLAGS   = -module -version-info @HPI_LIB_VERSION@
-
-# TODO: What would -export-dynamic be for?
-#liboa_soap_la_LDFLAGS  = -module -version-info @HPI_LIB_VERSION@ \
-			  -export-dymanic $(srcdir)/oa_soap.sym
-
