1955880: Make use of common SSL code Note that we'd like to test some more (and will do so) but we also need to get the changes into the trunk so the NSS work (issue 1950470) can proceed.

--- a/openhpi/trunk/plugins/ilo2_ribcl/Makefile.am
+++ b/openhpi/trunk/plugins/ilo2_ribcl/Makefile.am
@@ -35,7 +35,7 @@
 
 MAINTAINERCLEANFILES 	= Makefile.in
 
-INCLUDES		= @OPENHPI_INCLUDES@ @XML2_INCLUDE@ 
+INCLUDES		= @OPENHPI_INCLUDES@ @XML2_INCLUDE@ @OH_SSL_INCLUDES@
 
 pkglib_LTLIBRARIES	= libilo2_ribcl.la
 
